# doryn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-hello-exe.sh  build-math-dll.sh  devlog.md  run-build.bash  test.sh
components/concurrency/: CMakeLists.txt
components/containers/: CMakeLists.txt
components/data-structures/: CMakeLists.txt
components/engine/: CMakeLists.txt
components/engine/modules/: engine.ixx
components/engineObjects/: CMakeLists.txt
components/engineObjects/src/: dataContext.cpp  devices.cpp  objects.cpp  repositories.cpp  services.cpp
components/math/: CMakeLists.txt
components/math/src/: geometryMorphing.cpp
components/memory/: CMakeLists.txt
components/memory/src/: allocation.cpp  dynamicAllocator.cpp  globalAllocator.cpp  memoryBlockAllocator.cpp  stackAllocator.cpp
components/profiling/: CMakeLists.txt
components/serialization/: CMakeLists.txt
components/thread-lifetime-trace/: CMakeLists.txt
components/types/: CMakeLists.txt
core/: CMakeLists.txt
core-interfaces/: CMakeLists.txt
core/src/: allocationProfiler.cpp
core/src/controllers/: profiler.cpp  (+10 more)
core/typeTraits/: typeTraits.cppm
engine/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt  registry.h
src/base/: CMakeLists.txt  base.h  basicFrameService.cpp  basicFrameService.h  compileTimeTypes.h  controller.cpp  controller.h  dataContext.h  dependencies.ext.h  dependencies.h  doryExport.h  engine.cpp  engine.h  entityRepository.h  frameService.cpp  frameService.h  idFactory.h  io.h  memory.h  messagePool.h  module.h  plugin.h  project.h  registry.h  resourceHandle.h  serviceContainer.h  serviceLocator.h  typeComponents.h  types.cpp  types.h
src/baseBenchmarks/: CMakeLists.txt  concurrency.cpp  dependencies.h
src/baseTests/: CMakeLists.txt  atm_book.cpp  concurrency.cpp  configurationTests.cpp  dataLayout.h  dataLayoutTests.cpp  dependencies.h  eventTests.cpp  jsonTests.cpp  linearAlgebra.cpp  matrixCalculatorTests.cpp  messagesTests.cpp  modulesTest.cpp  objectVisitorTests.cpp  pipelineServiceTests.cpp  reflection.h  repositoryTests.cpp  scriptService.cpp  serializationTests.cpp  serviceContainer.cpp  serviceLocator.cpp  templates.cpp  typeMap.h  typeMapping.cpp
src/client/: CMakeLists.txt  client.h  main.cpp  registry.h
src/engine/: engine.h  entity.h
src/messageLibrary/: message.cpp
src/openGL/: CMakeLists.txt  dependencies.h  glfwWindow.h  glfwWindowController.cpp  glfwWindowController.h  glfwWindowFactory.h  glfwWindowParameters.h  glfwWindowRegistry.cpp  glfwWindowRegistry.h  glfwWindowSystem.cpp  glfwWindowSystem.h  olgDependencies.h  openGL.h  renderer.cpp  renderer.h  shaderMetadata.h  shaderService.h  shaderServiceError.h  viewControllerOpenGL.cpp  viewControllerOpenGL.h  windowService.h
src/systemWindows/: CMakeLists.txt  dependencies.h  systemThread.cpp  systemThread.h  windowParameters.h  windowSystem.cpp  windowSystem.h
src/templates/: objectVisitor.h  reflection.h
src/test-app/: main.cpp
src/testApp/: CMakeLists.txt  dependencies.ext.h  dependencies.h  main.cpp  project.cpp  project.h  project2.h  projectData.h  projectDataContext.h  registry.h  serviceLocator.h  settings.yaml  stepFrameService.h  systemThread.h
src/testDomain/: CMakeLists.txt  dependencies.ext.h  dependencies.h  stepFrameService.cpp  stepFrameService.ext.h  stepFrameService.h  testController.cpp  testController.ext.h  testController.h  testDomain.h  testLogic.cpp  testLogic.h
src/testModule/: CMakeLists.txt  factory.cpp  testModule.cpp  testModule.h  testModule2.cpp  testModule2.h
src/testPlugin/: CMakeLists.txt  factory.cpp  plugin.cpp  plugin.h
src/tests/: CMakeLists.txt  mocking.cpp  modules.cpp
src/win32/: CMakeLists.txt  consoleController.cpp  consoleController.h  dependencies.h  messageBuffer.h  win32.h  win32ConsoleController.cpp  win32ConsoleController.h  win32MessageBuffer.h  win32Window.h  win32WindowController.cpp  win32WindowController.h  win32WindowControllerParallel.cpp  win32WindowControllerParallel.h  win32WindowFactory.h  win32WindowParameters.h  win32WindowRepository.h  window.h  windowController.cpp  windowController.h  windowControllerParallel.cpp  windowControllerParallel.h  windowFactory.cpp  windowFactory.h  windowRepository.h  windowSystem.cpp  windowSystem.h  windowSystemParallel.cpp  windowSystemParallel.h
src/windowsImplementations/: CMakeLists.txt  consoleSystem.cpp  consoleSystem.h  dependencies.h  win32Window.h  window.cpp  window.h  windowSystem.cpp  windowSystem.h  windowSystemParallel.cpp  windowSystemParallel.h  windowsImplementations.h
tests/: CMakeLists.txt  dummy.cpp  modules.cpp
tests/baseBenchmarks/: CMakeLists.txt  concurrency.cpp  dependencies.h
tests/baseTests/: CMakeLists.txt  atm_book.cpp  concurrency.cpp  configurationTests.cpp  dataLayoutTests.cpp  dependencies.h  eventTests.cpp  linearAlgebra.cpp  matrixCalculatorTests.cpp  messagesTests.cpp  objectVisitorTests.cpp  pipelineServiceTests.cpp  repositoryTests.cpp  scriptService.cpp  serializationTests.cpp  templates.cpp  typeMapping.cpp
tests/benchmarks/: CMakeLists.txt  concurrency.cpp
tests/dory-benchmarks/: CMakeLists.txt  concurrency.cpp
tests/dory-tests/: CMakeLists.txt
tests/dory-tests-catch/: CMakeLists.txt
tests/engine/: CMakeLists.txt  modules.cpp
tests/tests/: CMakeLists.txt  modules.cpp
tests/tests-catch/: CMakeLists.txt  atm_book.cpp  concurrency.cpp  configurationTests.cpp  dataLayoutTests.cpp  eventTests.cpp  linearAlgebra.cpp  matrixCalculatorTests.cpp  messagesTests.cpp  objectVisitorTests.cpp  pipelineServiceTests.cpp  repositoryTests.cpp  scriptService.cpp  serializationTests.cpp  templates.cpp  typeMapping.cpp
tests/unit-tests/: CMakeLists.txt  camera.cpp  coroutinesPlayground.cpp  entt.cpp  enttSceneService.cpp  layoutSetupTests.cpp  layoutTests.cpp  logicalGates.cpp  memoriaTests.cpp  objectLifetime.cpp  pipelineRepository.cpp  pipelineServiceTests.cpp  pipelineTests.cpp  sceneService.cpp  sceneServiceEntt.cpp  serialization.cpp  structDef.cpp
(+1127 files in other folders)
